--- a/css/recipe.css
+++ b/css/recipe.css
@@ -8,6 +8,18 @@
 	margin-left: 30px;
 }
 
+.grid-items {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+
+}
+
+.grid-item {
+	min-width: 25%;
+
+}
 
 .recipe-img {
 	width: 200px;
@@ -111,6 +123,10 @@ ul.ingredient-list {
 	.recipe-card {
 		margin-left: 10px;
 		width: 215px;
+	}
+
+	.rec-body-header {
+		margin-top: 20px;
 	}
 
 	.quadrant {
